--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "url": "https://github.com/skillz/react-native-optional/issues"
   },
   "homepage": "https://github.com/skillz/react-native-optional#readme",
-  "author": "Greg Heirlihy (https://github.com/greghe)",
+  "author": "Greg Herlihy (https://github.com/greghe)",
   "contributors": [
     "Rupal Totale (https://github.com/rupaltotale)",
-    "Greg Heirlihy (https://github.com/greghe)",
+    "Greg Herlihy (https://github.com/greghe)",
     "Skillz (https://github.com/skillz)"
   ],
   "license": "MIT"
